update tugas 1 CV

--- a/latihan/latihan1/T1_233040028.html
+++ b/latihan/latihan1/T1_233040028.html
@@ -35,7 +35,7 @@
     <b><u>PENGALAMAN</u></b>
 
     <ol>
-        <li>Mobile Developer At Dewarangga.com, Selama 3 bulan bersertifikat.</li>
+        <li>Mobile Developer di Dewarangga.com, Selama 3 bulan bersertifikat.</li>
     </ol>
 
     <b><u>BAHASA PEMROGRAMAN</u></b>
