update gambar cv, artikel, nama&npm tugas

--- a/latihan/latihan1/T1233040028.html
+++ b/latihan/latihan1/T1233040028.html
@@ -17,12 +17,13 @@
     Alamat : Griya Bukit Jaya, Blok i2/27<br>
     Email : ramadhanaufa3@gmail.com<br><br>
 
-    <b><u>DESKRIPSI</u></b><br><br>
+    <b><u>DESKRIPSI</u></b>
 
-    <pre>
-    Saya adalah seorang Frontend Developer. Mampu membuat
-    sebuah website dengan menggunakan HTML, CSS, dan JavaScript.
-    </pre>
+    <p>
+        Saya adalah seorang Frontend Developer. Mampu membuat sebuah website dengan menggunakan HTML, CSS, dan
+        JavaScript.
+    </p>
+
 
     <b><u>PENDIDIKAN</u></b>
 
