latihan dan tugas 2

--- a/latihan/latihan2/T2233040028.html
+++ b/latihan/latihan2/T2233040028.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <table border="1" cellpadding="10" cellspacing="5" bgcolor="yellow">
+    <table border="1" cellpadding="10" cellspacing="5" bgcolor="aqua">
         <tr bgcolor="red">
             <td colspan="4" align="center">
                 CURRICULUM VITAE
@@ -38,12 +38,12 @@
         <tr>
             <td>Email</td>
             <td>:</td>
-            <td>samsudin@gmail.com</td>
+            <td>ramadhanaufa@gmail.com</td>
         </tr>
         <tr>
             <td>Tempat, Tanggal Lahir</td>
             <td>:</td>
-            <td>10 Agustus 1948</td>
+            <td>8 November 2004</td>
         </tr>
         <br>
         <tr>
@@ -52,7 +52,7 @@
         <tr>
             <td colspan="5">
                 <ul>
-                    <li>SDN 05 Tlajung Udik</li>
+                    <li>SDN 05 TLAJUNG UDIK</li>
                     <li>SMP PGRI KLAPANUNGGAL</li>
                     <li>SMK BINA MANDIRI MULTIMEDIA</li>
                     <li>UNIVERSITAS PASUNDAN</li>
