latihan dan tugas 2

--- a/latihan/latihan2/T2233040028.html
+++ b/latihan/latihan2/T2233040028.html
@@ -38,7 +38,7 @@
         <tr>
             <td>Email</td>
             <td>:</td>
-            <td>ramadhanaufa@gmail.com</td>
+            <td>ramadhanaufa3@gmail.com</td>
         </tr>
         <tr>
             <td>Tempat, Tanggal Lahir</td>
