latihan dan tugas 2

--- a/latihan/latihan2/L2b233040028.html
+++ b/latihan/latihan2/L2b233040028.html
@@ -10,7 +10,7 @@
 <body>
     <form action="POST">
         <table border="1" cellpadding="10" bordercolor="grey" cellspacing="0">
-            <thead bgcolor="grey">
+            <thead bgcolor="grey" style="font-weight: bold;">
                 <tr>
                     <td align="center" colspan="3">INPUT DATA MAHASISWA</td>
                 </tr>
