menyelesaikan latihan dan tugas 5

--- a/latihan/latihan5/T233040028.html
+++ b/latihan/latihan5/T233040028.html
@@ -82,40 +82,148 @@
       </div>
       <div class="content">
         <div class="content-img">
-          <img src="img/thumbs/1.jpg" alt="" />
+          <a href="#keyboard-1">
+            <img src="img/thumbs/1.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-1">
+            <a href="#keyboard-12" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/1.jpg" alt="keyboard" />
+            <a href="#keyboard-2" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/2.jpg" alt="" />
+          <a href="#keyboard-2">
+            <img src="img/thumbs/2.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-2">
+            <a href="#keyboard-1" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/2.jpg" alt="keyboard" />
+            <a href="#keyboard-3" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/3.jpg" alt="" />
+          <a href="#keyboard-3">
+            <img src="img/thumbs//3.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-3">
+            <a href="#keyboard-2" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/3.jpg" alt="keyboard" />
+            <a href="#keyboard-4" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/4.jpg" alt="" />
+          <a href="#keyboard-4">
+            <img src="img/thumbs/4.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-4">
+            <a href="#keyboard-3" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/4.jpg" alt="keyboard" />
+            <a href="#keyboard-5" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/5.jpg" alt="" />
+          <a href="#keyboard-5">
+            <img src="img/thumbs/5.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-5">
+            <a href="#keyboard-4" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/5.jpg" alt="keyboard" />
+            <a href="#keyboard-6" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/6.jpg" alt="" />
+          <a href="#keyboard-6">
+            <img src="img/thumbs/6.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-6">
+            <a href="#keyboard-5" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/6.jpg" alt="keyboard" />
+            <a href="#keyboard-7" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/7.jpg" alt="" />
+          <a href="#keyboard-7">
+            <img src="img/thumbs/7.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-7">
+            <a href="#keyboard-6" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/7.jpg" alt="keyboard" />
+            <a href="#keyboard-8" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/8.jpg" alt="" />
+          <a href="#keyboard-8">
+            <img src="img/thumbs/8.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-8">
+            <a href="#keyboard-7" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/8.jpg" alt="keyboard" />
+            <a href="#keyboard-9" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/9.jpg" alt="" />
+          <a href="#keyboard-9">
+            <img src="img/thumbs/9.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-9">
+            <a href="#keyboard-8" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/9.jpg" alt="keyboard" />
+            <a href="#keyboard-10" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/10.jpg" alt="" />
+          <a href="#keyboard-10">
+            <img src="img/thumbs/10.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-10">
+            <a href="#keyboard-9" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/10.jpg" alt="keyboard" />
+            <a href="#keyboard-11" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/11.jpg" alt="" />
+          <a href="#keyboard-11">
+            <img src="img/thumbs/11.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-11">
+            <a href="#keyboard-10" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/11.jpg" alt="keyboard" />
+            <a href="#keyboard-12" class="next">Next</a>
+          </div>
         </div>
         <div class="content-img">
-          <img src="img/thumbs/12.jpg" alt="" />
+          <a href="#keyboard-12">
+            <img src="img/thumbs/12.jpg" alt="" />
+            <span>Lihat</span>
+          </a>
+          <div class="overlay" id="keyboard-12">
+            <a href="#keyboard-11" class="prev">Prev</a>
+            <a href="#" class="close">X</a>
+            <img src="img/full/12.jpg" alt="keyboard" />
+            <a href="#keyboard-1" class="next">Next</a>
+          </div>
         </div>
       </div>
     </div>
