menyelesaikan latihan dan tugas 5

--- a/latihan/latihan5/T233040028.html
+++ b/latihan/latihan5/T233040028.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="header">
         <div class="profile-header">
-          <a href="">
+          <a href="#header-1">
             <img src="img/thumbs/vader.jpg" alt="vader" />
             <span>Lihat Profile</span>
           </a>
@@ -19,6 +19,24 @@
             <h1>Aufa Ramadhan</h1>
             <h2>Frontend Developer</h2>
           </div>
+        </div>
+        <div class="overlay" id="header-1">
+          <a href="#header-3" class="prev">Prev</a>
+          <a href="#" class="close">X</a>
+          <img src="img/full/setup-1.jpg" alt="setup" />
+          <a href="#header-2" class="next">Next</a>
+        </div>
+        <div class="overlay" id="header-2">
+          <a href="#header-1" class="prev">Prev</a>
+          <a href="#" class="close">X</a>
+          <img src="img/full/setup-3.jpg" alt="setup" />
+          <a href="#header-3" class="next">Next</a>
+        </div>
+        <div class="overlay" id="header-3">
+          <a href="#header-2" class="prev">Prev</a>
+          <a href="#" class="close">X</a>
+          <img src="img/full/pc-2.jpg" alt="pc" />
+          <a href="#" class="next">Next</a>
         </div>
         <ul class="profile-history">
           <li>
@@ -48,12 +66,12 @@
               <a href="#setup-3" class="prev">Prev</a>
               <a href="#" class="close">X</a>
               <img src="img/full/setup-4.jpg" alt="setup" />
-              <a href="#setup-1" class="next">Next</a>
+              <a href="#" class="next">Next</a>
             </div>
           </li>
           <li>
             <a href="#pc-1">
-              <img src="img/thumbs/pc-1.jpg" alt="" />
+              <img src="img/thumbs/pc-1.jpg" alt="pc" />
               <span>Lihat</span>
             </a>
             <div class="overlay" id="pc-1">
@@ -72,7 +90,7 @@
               <a href="#pc-2" class="prev">Prev</a>
               <a href="#" class="close">X</a>
               <img src="img/full/pc-3.jpg" alt="pc" />
-              <a href="#pc-1" class="next">Next</a>
+              <a href="#" class="next">Next</a>
             </div>
           </li>
         </ul>
@@ -87,7 +105,7 @@
             <span>Lihat</span>
           </a>
           <div class="overlay" id="keyboard-1">
-            <a href="#keyboard-12" class="prev">Prev</a>
+            <a href="#" class="prev">Prev</a>
             <a href="#" class="close">X</a>
             <img src="img/full/1.jpg" alt="keyboard" />
             <a href="#keyboard-2" class="next">Next</a>
@@ -222,7 +240,7 @@
             <a href="#keyboard-11" class="prev">Prev</a>
             <a href="#" class="close">X</a>
             <img src="img/full/12.jpg" alt="keyboard" />
-            <a href="#keyboard-1" class="next">Next</a>
+            <a href="#" class="next">Next</a>
           </div>
         </div>
       </div>
