Menyelesaikan latihan dan tugas 7

--- a/latihan/latihan7/L7233040028.html
+++ b/latihan/latihan7/L7233040028.html
@@ -42,7 +42,7 @@
 
       <section class="services">
         <div class="service">
-          <div class="icon">🧑‍💻</div>
+          <div class="icon">0</div>
           <h3>Tutorial</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
