--- a/latihan/latihan7/T7233040028.html
+++ b/latihan/latihan7/T7233040028.html
@@ -21,6 +21,18 @@
           <h4 class="price">IDR 450K</h4>
           <p class="item">Mouse</p>
         </div>
+        <div class="features feature-3">
+          <h4 class="price">IDR 850K</h4>
+          <p class="item">Headset</p>
+        </div>
+        <div class="features feature-4">
+          <h4 class="price">IDR 100K</h4>
+          <p class="item">Mousepad</p>
+        </div>
+        <div class="features feature-5">
+          <h4 class="price">IDR 2.500K</h4>
+          <p class="item">Monitor</p>
+        </div>
       </header>
       <nav class="menu">
         <div class="menu-toggle">
@@ -86,10 +98,10 @@
       <section class="products">
         <h2>Our Product</h2>
         <div class="product">
-          <img src="assets/img/mouse-1.jpg" />
+          <img src="assets/img/monitor-1.jpg" />
           <div class="overlay">
-            <h4>Mouse</h4>
-            <h5>IDR 150k</h5>
+            <h4>Monitor</h4>
+            <h5>IDR 2.150k</h5>
           </div>
         </div>
         <div class="product">
@@ -107,16 +119,16 @@
           </div>
         </div>
         <div class="product">
-          <img src="assets/img/keyboard-2.jpg" />
+          <img src="assets/img/headset-2.jpg" />
           <div class="overlay">
-            <h4>Keyboard</h4>
+            <h4>Headset</h4>
             <h5>IDR 750k</h5>
           </div>
         </div>
         <div class="product">
-          <img src="assets/img/mouse-3.jpg" />
+          <img src="assets/img/mousepad-1.jpg" />
           <div class="overlay">
-            <h4>Mouse</h4>
+            <h4>Mousepad</h4>
             <h5>IDR 350k</h5>
           </div>
         </div>
